# pokemonsay

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  devshell.toml  flake.nix  package.json  pokeapi-optimize-db-table.sql  pokeapi.lock.json  pokeapi.nix  result
.github/: dependabot.yml
.github/workflows/: nix.yaml
cli-rs/: Cargo.toml  build.rs
cli-rs/src/: main.rs
data/: Cargo.toml
data/src/: main.rs
src/: cli.js  db.rs  http.rs  image_util.rs  index.js  main.rs
src/pokeapi_db/: README.md  mod.rs  pokemon_v2_language.rs  pokemon_v2_pokemon.rs  pokemon_v2_pokemonspecies.rs  pokemon_v2_pokemonspeciesname.rs  pokemon_v2_pokemonsprites.rs  prelude.rs
tools/: build.js  compileJson.js  scrape.js  webpack.config.js
