[package]
name = "pokemonsay"
version = "0.1.0"
edition = "2024"
include = ["src/*", "result/db.sqlite3"]

[dependencies]
anyhow = "1.0.100"
bytes = { version = "1.11.0" }
clap = { version = "4.5.51", features = ["derive", "env"] }
image = "0.25.9"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
sea-orm = { version = "2.0.0-rc.18", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1.0.228"
serde_json = "1.0.145"
tinytemplate = "1.2.1"
tokio = { version = "1.48.0", features = ["full"] }
viuer = { version = "0.10.0", features = ["icy_sixel"] }

[build-dependencies]
glob = "0.3.3"

[features]
default = ["embed-db"]
embed-db = []
embed-sprites = []
