[package]
name = "pokemonsay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.8", default-features = false, features = ["png"] }
lazy_static = "1.4.0"
rand = "0.8.5"
viuer = { version = "0.7.1" }
